Replaced pattern matching in switch cases (JDK17 preview feature) with ifs and other constructs to remove dependency on the preview mode